# neural-2lmc-wos

./: .gitignore  README.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  pyproject.toml
configs/: ball3_siren_bias.yaml
n2wos/: __init__.py
n2wos/cache/: __init__.py  siren.py
n2wos/eval/: bias_variance.py
n2wos/geometry/: __init__.py  ball.py
n2wos/pde/: __init__.py  harmonic_sources.py
n2wos/training/: train_exact.py
n2wos/utils/: config.py  rng.py
n2wos/wos/: __init__.py  directions.py  wavefront.py
scripts/: eval_cached_bias.py  train_siren_cache.py
tests/: test_ball_geometry.py  test_harmonic_solution.py  test_wavefront_cached.py
