[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-2lmc-wos"
version = "0.1.0"
description = "Neural cache and two-level Monte Carlo experiments for Walk-on-Spheres"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pyyaml>=6.0",
  "matplotlib>=3.7",
  "tqdm>=4.66",
  "torch>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["n2wos*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
